/*
 * Copyright (C) 2023 by Fonoster Inc (https://fonoster.com)
 * http://github.com/fonoster/routr
 *
 * This file is part of Routr
 *
 * Licensed under the MIT License (the "License")
 * you may not use this file except in compliance with
 * the License. You may obtain a copy of the License at
 *
 *    https://opensource.org/licenses/MIT
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

package fonoster.routr.connect.credentials.v2draft1;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

// The Credentials service definition
service CredentialsService {
  // Creates a new set of Credentials
  rpc Create (CreateCredentialsRequest) returns (Credentials) {}
  // Updates an existing set of C redentials
  rpc Update (UpdateCredentialsRequest) returns (Credentials) {}
  // Gets the details of a given set of Credentials
  rpc Get (GetCredentialsRequest) returns (Credentials) {}
  // Deletes an existing set of Credentials
  rpc Delete (DeleteCredentialsRequest) returns (.google.protobuf.Empty) {}
  // Lists all Credentials
  rpc List (ListCredentialsRequest) returns (ListCredentialsResponse) {}
}

// The message for the Credentials resource
message Credentials {
  // The API version of the Credentials
  string api_version = 1;
  // The reference of the Credentials
  string ref = 2;
  // The name of the Credentials
  string name = 3;
  // The username of the Credentials
  string username = 4;
  // The password of the Credentials
  string password = 5;
  // The time the Credentials was created
  int32 created_at = 6;
  // The time the Credentials was updated
  int32 updated_at = 7;
  // The extended attributes for a set of Credentials
  .google.protobuf.Struct extended = 8;    
}

// The request message for the CreateCredentials.Create method
message CreateCredentialsRequest {
  // The name of the Credentials
  string name = 1;
  // The username of the Credentials
  string username = 2;
  // The password of the Credentials
  string password = 3;
  // The extended attributes for a set of Credentials
  .google.protobuf.Struct extended = 4;  
}

// The request message for the UpdateCredentials.Update method
message UpdateCredentialsRequest {
  // The reference of the Credentials to update
  string ref = 1;
  // The new name of the Credentials
  string name = 2;
  // The new username of the Credentials
  string username = 3;
  // The new password of the Credentials
  string password = 4;
  // The extended attributes for a set of Credentials
  .google.protobuf.Struct extended = 5;  
}

// The request message for the GetCredentials.Get method
message GetCredentialsRequest  {
  // The reference of the Credentials to retrieve
  string ref = 1;
}

// The request message for the DeleteCredentials.Delete method
message DeleteCredentialsRequest  {
  // The reference of the Credentials to delete
  string ref = 1;
}

// The request message for the ListCredentials.List method
message ListCredentialsRequest {
  // The maximum number of items in the list
  int32 page_size = 1;

  // The next_page_token value returned from the previous request, if any
  string page_token = 2;
}

// The response message for the ListCredentials.List method
message ListCredentialsResponse {
  // List of Credentials
  repeated Credentials items = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list
  string next_page_token = 2;
}
